force-app/main/default/objects/Case_Presence_Settings__mdt/Case_Presence_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Case Presence Settings</label>
    <pluralLabel>Case Presence Settings</pluralLabel>
</CustomObject>