force-app/main/default/objects/Case_Presence_Settings__mdt/fields/Draft_Check_Interval_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Draft_Check_Interval_Seconds__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Draft Check Interval (Seconds)</label>
    <description>How often to check for user drafts (in seconds)</description>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>