force-app/main/default/objects/Case_Presence_Settings__mdt/fields/Draft_Staleness_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Draft_Staleness_Minutes__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Draft Staleness (Minutes)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>