force-app/main/default/objects/Case_Presence_Settings__mdt/fields/Enable_Debug_Logging__c.field-meta.xml
<CustomField>
    <fullName>Enable_Debug_Logging__c</fullName>
    <label>Enable Debug Logging</label>
    <description>Enable console logging for debugging (disable in production for performance)</description>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>