force-app/main/default/objects/Case_Presence_Settings__mdt/fields/Expiration_Check_Interval_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Check_Interval_Seconds__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Expiration Check Interval (Seconds)</label>
    <description>How often to check for and remove expired users from the list (in seconds)</description>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>