force-app/main/default/objects/Case_Presence_Settings__mdt/fields/Heartbeat_Frequency_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Heartbeat_Frequency_Seconds__c</fullName>
    <defaultValue>20</defaultValue>
    <label>Heartbeat Frequency (Seconds)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>