force-app/main/default/objects/Case_Presence_Settings__mdt/fields/Key_Badge__c.field-meta.xml
<CustomField>
    <fullName>Key_Badge__c</fullName>
    <label>Key Badge</label>
    <description>Emoji or icon for key users (e.g., ⭐)</description>
    <length>10</length>
    <type>Text</type>
</CustomField>