force-app/main/default/objects/Case_Presence_Settings__mdt/fields/Key_Users__c.field-meta.xml
<CustomField>
    <fullName>Key_Users__c</fullName>
    <label>Key Users</label>
    <description>Comma-separated list of key user first names (e.g., John,Sarah,Mike)</description>
    <length>255</length>
    <type>Text</type>
</CustomField>