force-app/main/default/objects/Case_Presence_Settings__mdt/fields/Normal_Badge__c.field-meta.xml
<CustomField>
    <fullName>Normal_Badge__c</fullName>
    <label>Normal Badge</label>
    <description>Emoji or icon for normal users (e.g., 👤)</description>
    <length>10</length>
    <type>Text</type>
</CustomField>