force-app/main/default/objects/Case_Presence_Settings__mdt/fields/Normal_Users__c.field-meta.xml
<CustomField>
    <fullName>Normal_Users__c</fullName>
    <label>Normal Users</label>
    <description>Comma-separated list of normal user first names (e.g., Tom,Lisa,Bob)</description>
    <length>255</length>
    <type>Text</type>
</CustomField>