force-app/main/default/objects/Case_Presence_Settings__mdt/fields/Presence_Expiration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Presence_Expiration_Minutes__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Presence Expiration (Minutes)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>