force-app/main/default/objects/Case_Presence_Settings__mdt/fields/Show_Edit_Start_Toasts__c.field-meta.xml
<CustomField>
    <fullName>Show_Edit_Start_Toasts__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Edit Start Toasts</label>
    <type>Checkbox</type>
</CustomField>