force-app/main/default/objects/Case_Presence_Settings__mdt/fields/Show_Leave_Toasts__c.field-meta.xml
<CustomField>
    <fullName>Show_Leave_Toasts__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Leave Toasts</label>
    <type>Checkbox</type>
</CustomField>