force-app/main/default/objects/Case_Presence_Settings__mdt/fields/VIP_Badge__c.field-meta.xml
<CustomField>
    <fullName>VIP_Badge__c</fullName>
    <description>Badge to show for VIP users. Default: 👑. Can use any emoji: 🎅 🎄 ⭐ 🔥 💎</description>
    <label>VIP Badge</label>
    <length>10</length>
    <type>Text</type>
</CustomField>