force-app/main/default/objects/Case_Presence_Settings__mdt/fields/VIP_Users__c.field-meta.xml
<CustomField>
    <fullName>VIP_Users__c</fullName>
    <description>Comma-separated list of VIP user first names (case-insensitive). Example: Andy,Zakiyya,Sakshi</description>
    <label>VIP Users</label>
    <length>255</length>
    <type>Text</type>
</CustomField>